--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />  
         <title>jQuery Image Cropping Plug-In</title>  
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />  
-        <link href="resources/js/imageCrop/jquery.imagecrop.css" media="screen" rel="stylesheet" type="text/css" />  
-        <script src="resources/js/jquery-1.6.2.min.js" type="text/javascript"></script>  
-        <script src="resources/js/imageCrop/jquery.imagecrop.js" type="text/javascript"></script>  
+        <link href="js/imageCrop/jquery.imagecrop.css" media="screen" rel="stylesheet" type="text/css" />  
+        <script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>  
+        <script src="js/imageCrop/jquery.imagecrop.js" type="text/javascript"></script>  
     </head>  
   
     <body>  
@@ -14,8 +14,15 @@
             <h1>jQuery Image Cropping Plug-In</h1>  
   
             <div class="image-decorator">  
-                <img alt="jQuery Image Cropping Plug-In" height="360" id="example" src="resources/images/example.jpg" width="480" />  
-            </div><!-- .image-decorator -->  
-        </div><!-- #wrapper -->  
+                <img id="example" src="images/example.jpg" height="360" width="480" />  
+            </div>
+        </div>
+        <script type="text/javascript">
+          $(document).ready(function() {
+            $('img#example').imageCrop({
+              overlayOpacity: 0.25
+            });
+          });
+        </script>
     </body>  
 </html>  
